QA: fix subpixel gap on pods in some instances

--- a/scss/components/pod.scss
+++ b/scss/components/pod.scss
@@ -54,7 +54,7 @@
     left: 0;
     right: 0;
     bottom: 100%;
-    margin-bottom: 0;
+    margin-bottom: -1px;
     padding-left: rem-calc(20);
     padding-right: rem-calc(20);
   }
